--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <h3>Non perderti questi film</h3>
         </div>
       </div>
-      
+
       <div class="intestazioneFilm"></div>
-      <div class="film"></div>
+      <div class="film" data-page="1"></div>
       <div class="intestazione-serie"></div>
       <div class="serie_tv"></div>
     </div>
