aggiornamento serie tv tasti prev e succ

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="intestazioneFilm"></div>
       <div class="film" data-page="1"></div>
       <div class="intestazione-serie"></div>
-      <div class="serie_tv"></div>
+      <div class="serie_tv" data-page="1"></div>
     </div>
 
   </main>
