--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
     <div class="swiper-slide" data-id="{{id}}">
     <div class="parallax-bg" style="background-image: linear-gradient(0deg, rgba(19,23,34,1) 14%, rgba(19,23,34,0.2024160005799195) 100%), url({{backdrop}});" data-swiper-parallax="-23%"></div>
       <div class="title" data-swiper-parallax="-300">{{title}}</div>
-      <div class="modal__generi padding" data-swiper-parallax="-200">{{{genereStampa}}}</div>
-      <div class="overlay__voto padding" data-swiper-parallax="-200">{{{vote_average}}}</div>
+      <div class="modal__generi margin" data-swiper-parallax="-200">{{{genereStampa}}}</div>
+      <div class="overlay__voto margin" data-swiper-parallax="-200">{{{vote_average}}}</div>
       <div class="text" data-swiper-parallax="-100">
       <p>{{overview}}</p>
 
